v3.1.0/_sources/plugins/network_device_inventory_insight_link_mismatch_info_module.rst.txt
.. Document meta

:orphan:

.. Anchors

.. _ansible_collections.cisco.dnac.network_device_inventory_insight_link_mismatch_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.network_device_inventory_insight_link_mismatch_info -- Information module for Network Device Inventory Insight Link Mismatch
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.1.0).

    To install it use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.network_device_inventory_insight_link_mismatch_info`.

.. version_added

.. versionadded:: 1.0.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Network Device Inventory Insight Link Mismatch.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-category"></div>
                    <b>category</b>
                    <a class="ansibleOptionLink" href="#parameter-category" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Category query parameter. Links mismatch category. Value can be speed-duplex or vlan.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-limit"></div>
                    <b>limit</b>
                    <a class="ansibleOptionLink" href="#parameter-limit" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Limit query parameter. Default value is 500.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-offset"></div>
                    <b>offset</b>
                    <a class="ansibleOptionLink" href="#parameter-offset" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Offset query parameter. Row Number. Default value is 1.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-order"></div>
                    <b>order</b>
                    <a class="ansibleOptionLink" href="#parameter-order" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Order query parameter. Order. Value can be asc or desc. Default value is asc.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-siteId"></div>
                    <b>siteId</b>
                    <a class="ansibleOptionLink" href="#parameter-siteId" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>SiteId path parameter.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-sortBy"></div>
                    <b>sortBy</b>
                    <a class="ansibleOptionLink" href="#parameter-sortBy" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>SortBy query parameter. Sort By.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Notes


.. Seealso

See Also
--------

.. seealso::

   `Network Device Inventory Insight Link Mismatch reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Network Device Inventory Insight Link Mismatch object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Network Device Inventory Insight Link Mismatch
      cisco.dnac.network_device_inventory_insight_link_mismatch_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        offset: string
        limit: string
        category: string
        sortBy: string
        order: string
        siteId: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                            <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{
      &quot;response&quot;: [
        {
          &quot;endPortAllowedVlanIds&quot;: &quot;string&quot;,
          &quot;endPortNativeVlanId&quot;: &quot;string&quot;,
          &quot;startPortAllowedVlanIds&quot;: &quot;string&quot;,
          &quot;startPortNativeVlanId&quot;: &quot;string&quot;,
          &quot;linkStatus&quot;: &quot;string&quot;,
          &quot;endDeviceHostName&quot;: &quot;string&quot;,
          &quot;endDeviceId&quot;: &quot;string&quot;,
          &quot;endDeviceIpAddress&quot;: &quot;string&quot;,
          &quot;endPortAddress&quot;: &quot;string&quot;,
          &quot;endPortDuplex&quot;: &quot;string&quot;,
          &quot;endPortId&quot;: &quot;string&quot;,
          &quot;endPortMask&quot;: &quot;string&quot;,
          &quot;endPortName&quot;: &quot;string&quot;,
          &quot;endPortPepId&quot;: &quot;string&quot;,
          &quot;endPortSpeed&quot;: &quot;string&quot;,
          &quot;startDeviceHostName&quot;: &quot;string&quot;,
          &quot;startDeviceId&quot;: &quot;string&quot;,
          &quot;startDeviceIpAddress&quot;: &quot;string&quot;,
          &quot;startPortAddress&quot;: &quot;string&quot;,
          &quot;startPortDuplex&quot;: &quot;string&quot;,
          &quot;startPortId&quot;: &quot;string&quot;,
          &quot;startPortMask&quot;: &quot;string&quot;,
          &quot;startPortName&quot;: &quot;string&quot;,
          &quot;startPortPepId&quot;: &quot;string&quot;,
          &quot;startPortSpeed&quot;: &quot;string&quot;,
          &quot;lastUpdated&quot;: &quot;string&quot;,
          &quot;numUpdates&quot;: 0,
          &quot;avgUpdateFrequency&quot;: 0,
          &quot;type&quot;: &quot;string&quot;,
          &quot;instanceUuid&quot;: &quot;string&quot;,
          &quot;instanceTenantId&quot;: &quot;string&quot;
        }
      ],
      &quot;version&quot;: &quot;string&quot;
    }</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

